--- a/texDocs/myWorks.bib
+++ b/texDocs/myWorks.bib
@@ -8,20 +8,25 @@
   journal = {Statistica Sinica},
   pages={pre-published online},
   year = {2022},
+  priority = {1}
 }
 
  @article{wheeler2023-a,
-    author  = {Wheeler, Jesse and Ionides, Edward L.}, 
+    author  = {Wheeler, Jesse and Ionides, Edward L.},
     year    = "\noop{3001}Working Paper, 2023",
     journal = "The R Journal",
-    title = {Likelihood Based Inference of {ARMA} Models}
+    title = {Likelihood Based Inference of {ARMA} Models},
+    priority = {1},
+    working = {Working Paper}
 }
 
-@article{wheeler2023-b, 
+@article{wheeler2023-b,
     author = {Wheeler, Jesse and Ionides, Edward L.},
     year = "\noop{3002}Working Paper",
     title = {Block Panel Iterated Filtering for Unit-Specific Parameters},
-    journal = {TBD}
+    journal = {TBD},
+    priority = {1},
+    working = {Working Paper}
 }
 
 @article{wheeler2023-c,
@@ -29,5 +34,7 @@
     year = "\noop{3003}Submitted, 2023",
     title = {Informing Policy via Dynamic Models: Cholera in {H}aiti},
     journal = {The Annals of Applied Statistics},
-    doi = {arXiv:2301.08979}
+    doi = {arXiv:2301.08979},
+    priority = {1},
+    working = {Submitted}
 }
