--- a/texDocs/cv.tex
+++ b/texDocs/cv.tex
@@ -1,7 +1,7 @@
 \documentclass[11pt] {article}
 \usepackage[utf8]{inputenc}
 \usepackage{geometry}
-\usepackage{fancyhdr}   
+\usepackage{fancyhdr}
 \usepackage{sectsty}
 \usepackage{hyperref}
 
@@ -80,7 +80,7 @@
 % % name of the studies
 %   \noindent  \textbf{#1}
 %   % at the right the duration
-%     \hfill 
+%     \hfill
 %     \framebox{% duration inside a frame box
 %     \parbox{6em}{%
 %     \centering\textbf{#2}}} \par
@@ -88,7 +88,7 @@
 %      \noindent \textit{#3} \par
 %      % description with no hanging and in smaller text
 %      \vspace*{0.5em}
-%      \noindent\hangindent=2em\hangafter=0 \small #4 
+%      \noindent\hangindent=2em\hangafter=0 \small #4
 % %back to normal size
 % \normalsize \par}
 
@@ -99,14 +99,14 @@
 \rule{0mm}{1mm}
 \vspace{-20mm}
 
-%\hfill{\small \today} 
+%\hfill{\small \today}
 
 \vspace{1mm}
 
 %\begin{center}
-%\hfill 
+%\hfill
 \rule{0mm}{1mm}\hspace{5cm}{\large {\bf JESSE WHEELER}}
-%\hfill 
+%\hfill
 %\end{center}
 %\vspace{1mm}
 
@@ -118,9 +118,9 @@ Department of Statistics \>  % phone: (734) 615-3332
 Email: {jeswheel@umich.edu}
 \\
 University of Michigan\> % fax: (734) 763-4676
-{}
+{\url{jeswheel.github.io}
 \\
-Ann Arbor MI 48109-1107 \> 
+Ann Arbor MI 48109-1107 \>
 \end{tabbing}
 
 \section*{Education}
@@ -138,21 +138,21 @@ Utah State University (USU), Logan, UT.
 Graduated Summa cum laude as valedictorian of the College of Science, class of 2020
 
 \section*{Research}
-\subsection*{Interests} 
+\subsection*{Interests}
 \begin{interests}
     \item Time Series Analysis via Mechanistic Models
-    \item Computational Statistics 
-    \item Reproducible and Robust Statistics 
-    \item Applications in infectious disease modeling. 
+    \item Computational Statistics
+    \item Reproducible and Robust Statistics
+    \item Applications in infectious disease modeling.
 \end{interests}
 \subsection*{Peer Reviewed Publications}
 
 \begin{reflist}
 
-    \item Wheeler, J., Rosengart, A., Jiang, Z., Tan, K., Truetle, N., Ionides, E. (2023) Informing policy via dynamic models: Cholera in Haiti. {\it Annals of applied statistics}. \url{https://arxiv.org/abs/2301.08979} \textbf{Submitted.} 
+    \item Wheeler, J., Rosengart, A., Jiang, Z., Tan, K., Truetle, N., Ionides, E. (2023) Informing policy via dynamic models: Cholera in Haiti. {\it Annals of applied statistics}. \url{https://arxiv.org/abs/2301.08979} \textbf{Submitted.}
 
     \item Wagstaff, J., Bean, B., Wheeler, J., Maguire, M., Sun, Y. (2023) Adaptive Mapping of Design Ground Snow Loads in the Conterminous United States. {\it Journal of Structural Engineering}, \textbf{Submitted}.
-  
+
     \item Ionides, E. L., Ning, N. and Wheeler, J. (2022). An iterated block particle filter for inference on coupled dynamic systems with shared and unit-specific parameters. {\it Statistica Sinica}, \textbf{accepted}.
 
     \item Wheeler, J., Bean, B., Maguire, M. (2022). Creating a Universal Depth-to-Load Conversion Technique for the Conterminous United States Using Random Forests. {\it Journal of Cold Regions Engineering, 36(1), 04021019}. doi:10.1061/(ASCE)CR.1943-5495.0000270
@@ -160,7 +160,7 @@ Graduated Summa cum laude as valedictorian of the College of Science, class of 2
     \item Bean, B., Maguire, M., Sun, Y., Wagstaff, J., Al-Rubaye, S., Wheeler, J., Jarman, S., Rogers, M. (2021). The 2020 National Snow Load Study. {\it Utah State University}.
 
     \item White, T., Wheeler, J., Lindstrom, C., Christensen, R., Moon, K. (2021). GPS-Denied Navigation Using SAR Images and Neural Networks. {\it ICASSP 2021 - 2021 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)}. Toronto, ON, Canada, 2021, pp. 2395-2399, doi:10.1109/ICASSP39728.2021.9414421.
-    
+
 \end{reflist}
 
 \subsection*{Conference Presentations}
@@ -169,14 +169,14 @@ Graduated Summa cum laude as valedictorian of the College of Science, class of 2
 
     \item Wheeler, J., Rosengart, A., Jiang, Z., Tan, K., Treutle, N., Ionides., E. (2023). Informing Policy Via Dynamic Models: Cholera in Haiti. Contributed Paper. {\it Bayes Comp 2023, Satellite Event: Bayesian Inference of Epidemics, Levi, Finland}. \textbf{Upcoming, March 2023.}
 
-    \item Wheeler, J., Rosengart, A., Jiang, J., Ionides, E. (2022). Eliminating Cholera in Haiti: Combining Dynamic Models with Data to Inform Vaccination Policy. Contributed Paper. {\it JSM 2020, Washington D.C.}. 
+    \item Wheeler, J., Rosengart, A., Jiang, J., Ionides, E. (2022). Eliminating Cholera in Haiti: Combining Dynamic Models with Data to Inform Vaccination Policy. Contributed Paper. {\it JSM 2020, Washington D.C.}.
 
-    \item Wheeler, J., Bean, B. (2020). Estimating Snow Water Equivalence Using Easily Obtainable Climate Variables. USU Student Research Symposium. 
+    \item Wheeler, J., Bean, B. (2020). Estimating Snow Water Equivalence Using Easily Obtainable Climate Variables. USU Student Research Symposium.
 
     \item Wheeler, J., Lindstrom, C., Christensen, R., Moon, K. (2020). Poster: GPS-Denied Navigation Using SAR Images and Neural Networks. {\it Utah Conference on Undergraduate Research, Logan, UT}.
 
-    \item Christensen, D., Villanueva, I., Wheeler, J., Vicioso, P., Husman, J., Lampkins, S., Youmans, K. (2019). Exploring Potential Relationships Between Self-Efficacy, Performance, and Electrodermal Activity in Engineering Exams. {\it American Educational Research Association.} April 5-9. Toronto, Canada. 
-    
+    \item Christensen, D., Villanueva, I., Wheeler, J., Vicioso, P., Husman, J., Lampkins, S., Youmans, K. (2019). Exploring Potential Relationships Between Self-Efficacy, Performance, and Electrodermal Activity in Engineering Exams. {\it American Educational Research Association.} April 5-9. Toronto, Canada.
+
 \end{reflist}
 
 \subsection*{Awards}
@@ -185,6 +185,9 @@ Graduated Summa cum laude as valedictorian of the College of Science, class of 2
 
 \vspace{2mm}
 \noindent\hspace{5mm}\textbf{Rackham Merit Fellowship}, University of Michigan \hfill {\textit{2020-2025}}
+
+\vspace{2mm}
+\noindent\hspace{5mm}\textbf{Valedictorian}, USU College of Science \hfill {\textit{2020}}
 
 \vspace{2mm}
 \noindent\hspace{5mm}\textbf{URCO Grant}, USU \hfill  {\textit{2020}}
@@ -219,7 +222,7 @@ Graduated Summa cum laude as valedictorian of the College of Science, class of 2
 
 \subsection*{Mentoring}
 
-\noindent\hspace{5mm}Undergraduate projects and thesis: Kevin Tan (2022), Noah Treutle (2022) and Bo Yang (Present). 
+\noindent\hspace{5mm}Undergraduate projects and thesis: Kevin Tan (2022), Noah Treutle (2022) and Bo Yang (Present).
 
 \subsection*{Awards}
 
