--- a/texDocs/cv.tex
+++ b/texDocs/cv.tex
@@ -115,10 +115,10 @@
 \begin{tabbing}
 University of Michiganxxxxxxxxxxxxxxxxxxxxxxxxxx\= \kill
 Department of Statistics \>  % phone: (734) 615-3332
-Email: {jeswheel@umich.edu}
+{\url{https://jeswheel.github.io/}}
 \\
 University of Michigan\> % fax: (734) 763-4676
-{\url{jeswheel.github.io}
+Email: {jeswheel@umich.edu}
 \\
 Ann Arbor MI 48109-1107 \>
 \end{tabbing}
