--- a/texDocs/cv.tex
+++ b/texDocs/cv.tex
@@ -149,11 +149,11 @@ Graduated Summa cum laude as valedictorian of the College of Science, class of 2
 
 \begin{reflist}
 
-    \item Wheeler, J., Rosengart, A., Jiang, Z., Tan, K., Truetle, N., Ionides, E. (2023) Informing policy via dynamic models: Cholera in Haiti. {\it Annals of applied statistics}. \url{https://arxiv.org/abs/2301.08979} \textbf{Submitted.}
+    \item Wheeler, J., Rosengart, A., Jiang, Z., Tan, K., Truetle, N., Ionides, E. (2023) Informing policy via dynamic models: Cholera in Haiti. {\it ArXiv preprint}. \url{https://arxiv.org/abs/2301.08979} \textbf{Submitted.}
 
-    \item Wagstaff, J., Bean, B., Wheeler, J., Maguire, M., Sun, Y. (2023) Adaptive Mapping of Design Ground Snow Loads in the Conterminous United States. {\it Journal of Structural Engineering}, \textbf{Submitted}.
+    \item Wagstaff, J., Bean, B., Wheeler, J., Maguire, M., Sun, Y. (2024) Adaptive Mapping of Design Ground Snow Loads in the Conterminous United States. {\it Journal of Structural Engineering}.
 
-    \item Ionides, E. L., Ning, N. and Wheeler, J. (2022). An iterated block particle filter for inference on coupled dynamic systems with shared and unit-specific parameters. {\it Statistica Sinica}, \textbf{accepted}.
+    \item Ionides, E. L., Ning, N. and Wheeler, J. (2022). An iterated block particle filter for inference on coupled dynamic systems with shared and unit-specific parameters. {\it Statistica Sinica}, preprint online.
 
     \item Wheeler, J., Bean, B., Maguire, M. (2022). Creating a Universal Depth-to-Load Conversion Technique for the Conterminous United States Using Random Forests. {\it Journal of Cold Regions Engineering, 36(1), 04021019}. doi:10.1061/(ASCE)CR.1943-5495.0000270
 
