Updated makefile and resulting website

--- a/texDocs/cv.tex
+++ b/texDocs/cv.tex
@@ -149,7 +149,7 @@ Graduated Summa cum laude as valedictorian of the College of Science, class of 2
 
 \begin{reflist}
 
-    \item Wheeler, J., Rosengart, A., Jiang, Z., Tan, K., Truetle, N., Ionides, E. (2023) Informing policy via dynamic models: Cholera in Haiti. {\it ArXiv preprint}. \url{https://arxiv.org/abs/2301.08979} \textbf{Submitted.}
+    \item Wheeler, J., Rosengart, A., Jiang, Z., Tan, K., Truetle, N., Ionides, E. (2023) Informing policy via dynamic models: Cholera in Haiti. {\it Accepted at PLoS Computational Biology}. \url{https://arxiv.org/abs/2301.08979}
 
     \item Wagstaff, J., Bean, B., Wheeler, J., Maguire, M., Sun, Y. (2024) Adaptive Mapping of Design Ground Snow Loads in the Conterminous United States. {\it Journal of Structural Engineering}.
 
