--- a/texDocs/researchStatement.tex
+++ b/texDocs/researchStatement.tex
@@ -81,7 +81,7 @@ This section briefly describes some of the open-source software packages to whic
     My contributions to this package are bug fixes.
 \end{itemize}
 
-\bibliography{texDocs/myWorks.bib}
+\bibliography{myWorks.bib}
 \bibliographystyle{ieeetr}
 
 \end{document}
